--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "proxy": "http://localhost:4242",
   "scripts": {
     "start-client": "react-scripts start",
-    "start-server": "node server.js",
+    "start-server": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
