--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "stripe-sample",
   "version": "0.1.0",
   "engines": {
-    "node": "14.17.3"
+    "node": "14.17.3",
+    "npm": "6.14.13"
     },
   "dependencies": {
     "@stripe/react-stripe-js": "^1.0.0",
